# proof-of-twitter-sp1

./: README.md  start.sh
backend/: .gitignore
backend/node-script/: package.json
backend/node-scripts/: .gitignore  email.eml  generate-dkim.js  generate-inputs.ts  input.json  main.js  main.ts  package.json
backend/node-scripts/patches/: @zk-email+helpers+6.0.2.patch
backend/program/: Cargo.toml
backend/program/elf/: riscv32im-succinct-zkvm-elf
backend/program/src/: main.rs
backend/script/: .gitignore  Cargo.toml  dkim3.json  package.json  start.sh
backend/script/src/: main.rs
frontend/: .eslintrc.cjs  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Dropzone.tsx  GenerateProof.tsx  Hero.tsx  InstructionListItem.tsx  VerifyProof.tsx
frontend/src/examples/: Base Case.eml
frontend/src/examples/dkim/: Base Case.json  Invalid Signature.json  Not PW Reset Email.json
frontend/src/examples/eml/: Invalid Signature.eml  Non Twitter.eml  Not PW Reset Email.eml
