[workspace]
[package]
version = "0.1.0"
name = "backend-script"
edition = "2021"

[dependencies]
rocket = "0.5.0"
serde = "1.0.200"
serde_json = "1.0.116"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git" }
